Уточнение документации
