# cmd/r-vBackend/docs/swagger.json
@@ -435,7 +435,7 @@
         },
         "/api/programs/cart-icon": {
             "get": {
-                "description": "Получает ID текущей программы-черновика и количество команд в ней. Доступно всем, для госта всегда возвращается 0, 0",
+                "description": "Получает ID текущей программы-черновика и количество команд в ней. Доступно всем, для гостя всегда возвращается 0, 0",
                 "produces": [
                     "application/json"
                 ],
@@ -447,7 +447,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.programCmdsResp"
+                            "$ref": "#/definitions/handler.successCartResp"
                         }
                     },
                     "403": {
@@ -976,6 +976,17 @@
                 }
             }
         },
+        "handler.programCartResp": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "prg_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "handler.programCmdsResp": {
             "type": "object",
             "properties": {
@@ -1043,6 +1054,17 @@
                 "password": {
                     "type": "string",
                     "minLength": 6
+                }
+            }
+        },
+        "handler.successCartResp": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/handler.programCartResp"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
